--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "gpt-sniper-bot",
+  "name": "sniper-bot",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.10.0",
-    "discord.js": "^14.21.0",
-    "dotenv": "^17.0.1"
+    "express": "^4.18.2"
   }
 }
