--- a/.env file
+++ b/.env file
@@ -2,3 +2,4 @@ MEXC_API_KEY=mx0vglh81ZOeDXP1dH
 MEXC_API_SECRET=45dea2c4fb6f48e992658c969b6f382b
 DISCORD_BOT_TOKEN=your_discord_token
 DISCORD_CHANNEL_ID=1390434059578245220
+COINALYZE_API_KEY=1d5f63f1-43af-49ab-b973-c7d4e8de7e23
