--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ TOKEN=your_discord_token_here
 FINNHUB_KEY=d1jti1hr0lq1lh39cju0dj1ti1hr0lq1lh39cjug
 MEXC_API_KEY=mx0vglh81ZOeDXP1dH
 MEXC_API_SECRET=45dea2c4fb6f48e992658c969b6f382b
+COINALYZE_API_KEY=671f76e0-53d2-432b-a57a-afbd6d89fd48
